Fixed div overlapping nav links.  Finished about me page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ a {
 #footer-section {
   background-color: #000;
   color: #fff;
-  padding: 3em 0;
+  padding: 2em 0;
 }
 
 #footer-section img {
@@ -179,15 +179,17 @@ a {
 /*--------------------NAV SECTION------------*/
 .nav-section {
   background-color: #000;
-  padding: 0.5em 0 2.5em 0;
-}
-
-.header-content {
-  float: left;
+  padding: 1.25em 0;
+  overflow: auto;
 }
 
 .logo {
   width: 3em;
+  float: left;
+}
+
+.nav-logo {
+  width: 14em;
   float: left;
 }
 
@@ -196,7 +198,6 @@ a {
   color: #fff;
   font-weight: 300;
   position: relative;
-  top: 0.6em;
   left: 0.5em;
 }
 
@@ -205,19 +206,21 @@ a {
 /*------------------------------------------------------*/
 
 #about-section {
-  padding: 5em 0 7em 0;
+  padding: 0em 0 7em 0;
 }
 
 #ed-image {
-  width: 50em;
+  width: 100%;
   margin: 0 auto;
+  background-color: #F0F8F6;
   text-align: center;
+  margin-bottom: 4em;
 }
 
 #ed-image > img {
  border: 2px solid #50E3C2;
  border-radius: 50%;
- margin-bottom: 2em;
+ margin: 2em 0;
 }
 
 #about-section p {
